--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 spring.application.name=taller
-server.port=8080
+server.port=8083
+
+# Configuración de la base de datos H2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+
+# Habilitar la consola H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configuración de JPA (si usas JPA)
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
