integracion-de-base-de-datos-y-de-formulario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+# Configuración básica de la aplicación
 spring.application.name=taller
 server.port=8082
 
 # Configuración de la base de datos H2
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -11,6 +12,15 @@ spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Configuración de JPA (si usas JPA)
+# Configuración de JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Otras configuraciones opcionales
+# Mostrar SQL generado por Hibernate
+spring.jpa.show-sql=true
+# Configuración del formato del SQL generado por Hibernate
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configuración de la consola de H2 (opcional, para permitir la conexión remota)
+spring.h2.console.settings.web-allow-others=true
